// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button group snapshot 1`] = `
<DocumentFragment>
  .c3 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c5 span {
  margin-right: 0rem;
}

.c5 span svg path {
  fill: #ffffff;
}

.c5:hover,
.c5:active,
.c5:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c5:hover svg path,
.c5:active svg path,
.c5:focus svg path {
  fill: #ffffff;
}

.c5:active,
.c5:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c5:hover {
  border: 1px solid #00000000;
}

.c5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c2 span {
  margin-right: 0rem;
}

.c2 span svg path {
  fill: #ffffff;
}

.c2:hover,
.c2:active,
.c2:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c2:hover svg path,
.c2:active svg path,
.c2:focus svg path {
  fill: #ffffff;
}

.c2:active,
.c2:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c2:hover {
  border: 1px solid #00000000;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c1 {
  border-radius: 0rem;
}

.c0 .c1:first-of-type {
  border-top-left-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c0 .c1:last-of-type {
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
}

.c0 .c1:not(:last-of-type)::after {
  content: "";
  display: block;
  width: 1px;
}

.c4 {
  margin-left: -1px;
  border: none;
  border-left: 1px solid rgba(255,255,255,0.2);
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      <span
        class="c3"
        height="1.8rem"
        type="oInfo"
        width="1.8rem"
      >
        <svg
          fill="#000"
          height="1.8rem"
          viewBox="0 0 24 24"
          width="1.8rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
          />
        </svg>
      </span>
    </button>
    <hr
      class="c4"
    />
    <button
      class="c1 c5"
    >
      Dropdown
    </button>
    <hr
      class="c4"
    />
    <button
      class="c1 c2"
    >
      <span
        class="c3"
        height="1.8rem"
        type="oExpandMore"
        width="1.8rem"
      >
        <svg
          fill="#000"
          height="1.8rem"
          viewBox="0 0 24 24"
          width="1.8rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59009L12 13.1701L7.41 8.59009L6 10.0001L12 16.0001L18 10.0001L16.59 8.59009Z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button renders with a custom color object correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #873421;
  background-color: #f142f4;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #873421;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #873421;
  background-color: #ed12f1;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #873421;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a custom color object correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #873421;
  background-color: #f142f4;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #873421;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #873421;
  background-color: #ed12f1;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #873421;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a custom color object correctly 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #873421;
  background-color: #f142f4;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #873421;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #873421;
  background-color: #ed12f1;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #873421;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a custom color theme correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #1a1a1a;
  background-color: #f142f4;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #1a1a1a;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #1a1a1a;
  background-color: #ed12f1;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #1a1a1a;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a custom color theme correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #1a1a1a;
  background-color: #f142f4;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #1a1a1a;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #1a1a1a;
  background-color: #ed12f1;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #1a1a1a;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a custom color theme correctly 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #1a1a1a;
  background-color: #f142f4;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #1a1a1a;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #1a1a1a;
  background-color: #ed12f1;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #1a1a1a;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a specified color preset correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #990000;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #cc0000;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a specified color preset correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #990000;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #cc0000;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with a specified color preset correctly 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #990000;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #cc0000;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with inset correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #ffffff;
  color: #333333;
  font-size: 1rem;
  line-height: 1.6rem;
  border-radius: 0.4rem;
  margin-left: 0.4rem;
  padding: 0rem 0.3rem 0rem 0.3rem;
}

<button
    class="c0"
  >
    button
    <div
      class="c1"
    >
      10
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with inset correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #ffffff;
  color: #333333;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.4rem;
  margin-left: 0.4rem;
  padding: 0rem 0.3rem 0rem 0.3rem;
}

<button
    class="c0"
  >
    button
    <div
      class="c1"
    >
      10
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with inset correctly 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #ffffff;
  color: #333333;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.4rem;
  margin-left: 0.4rem;
  padding: 0rem 0.3rem 0rem 0.3rem;
}

<button
    class="c0"
  >
    button
    <div
      class="c1"
    >
      10
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with text and an icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.4rem;
  width: 1.4rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.3rem;
  padding-right: 0.6rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.2rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.4rem"
      type="oInfo"
      width="1.4rem"
    >
      <svg
        fill="#000"
        height="1.4rem"
        viewBox="0 0 24 24"
        width="1.4rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with text and an icon correctly 2`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.5rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with text and an icon correctly 3`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.7rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button renders with text, icon and inset correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.4rem;
  width: 1.4rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.3rem;
  padding-right: 0.6rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.2rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #ffffff;
  color: #333333;
  font-size: 1rem;
  line-height: 1.6rem;
  border-radius: 0.4rem;
  margin-left: 0.4rem;
  padding: 0rem 0.3rem 0rem 0.3rem;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.4rem"
      type="oInfo"
      width="1.4rem"
    >
      <svg
        fill="#000"
        height="1.4rem"
        viewBox="0 0 24 24"
        width="1.4rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
    <div
      class="c2"
    >
      10
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with text, icon and inset correctly 2`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.5rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #ffffff;
  color: #333333;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.4rem;
  margin-left: 0.4rem;
  padding: 0rem 0.3rem 0rem 0.3rem;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
    <div
      class="c2"
    >
      10
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with text, icon and inset correctly 3`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.7rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #ffffff;
  color: #333333;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.4rem;
  margin-left: 0.4rem;
  padding: 0rem 0.3rem 0rem 0.3rem;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
    <div
      class="c2"
    >
      10
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button with size large renders a bare variant correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #002966;
  background-color: #00000000;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #003d99;
  background-color: #f2f2f2;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #003d99;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size large renders a ghost variant correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #002966;
  background-color: #ffffff;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #002966;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #0066ff;
  background-color: #ffffff;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #0066ff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #0066ff;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size large renders a primary variant with a label correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size large renders a primary variant with a label correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size large renders with a bare icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.7rem;
  padding-right: 1.4rem;
  color: #002966;
  background-color: #00000000;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #003d99;
  background-color: #f2f2f2;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #003d99;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size large renders with an icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.7rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size medium renders a bare variant correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #002966;
  background-color: #00000000;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #003d99;
  background-color: #f2f2f2;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #003d99;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size medium renders a ghost variant correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #002966;
  background-color: #ffffff;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #002966;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #0066ff;
  background-color: #ffffff;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #0066ff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #0066ff;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size medium renders a primary variant with a label correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size medium renders a primary variant with a label correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size medium renders with a bare icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.5rem;
  padding-right: 1.4rem;
  color: #002966;
  background-color: #00000000;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #003d99;
  background-color: #f2f2f2;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #003d99;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size medium renders with an icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.8rem;
  width: 1.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  line-height: 2rem;
  padding-left: 0.5rem;
  padding-right: 1.4rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.4rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.8rem"
      type="oInfo"
      width="1.8rem"
    >
      <svg
        fill="#000"
        height="1.8rem"
        viewBox="0 0 24 24"
        width="1.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size small renders a bare variant correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  color: #002966;
  background-color: #00000000;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #003d99;
  background-color: #f2f2f2;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #003d99;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size small renders a ghost variant correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  color: #002966;
  background-color: #ffffff;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #002966;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #0066ff;
  background-color: #ffffff;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #0066ff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #0066ff;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size small renders a primary variant with a label correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size small renders a primary variant with a label correctly 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size small renders with a bare icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.4rem;
  width: 1.4rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.3rem;
  padding-right: 0.6rem;
  color: #002966;
  background-color: #00000000;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.2rem;
}

.c0 span svg path {
  fill: #002966;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #003d99;
  background-color: #f2f2f2;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #003d99;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.4rem"
      type="oInfo"
      width="1.4rem"
    >
      <svg
        fill="#000"
        height="1.4rem"
        viewBox="0 0 24 24"
        width="1.4rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;

exports[`Button with size small renders with an icon correctly 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 1.4rem;
  width: 1.4rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  line-height: 1.8rem;
  padding-left: 0.3rem;
  padding-right: 0.6rem;
  color: #ffffff;
  background-color: #002966;
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
  border-radius: 0.4rem;
  border-style: none;
  box-sizing: border-box;
  border: 1px solid #00000000;
}

.c0 span {
  margin-right: 0.2rem;
}

.c0 span svg path {
  fill: #ffffff;
}

.c0:hover,
.c0:active,
.c0:focus {
  color: #ffffff;
  background-color: #003d99;
}

.c0:hover svg path,
.c0:active svg path,
.c0:focus svg path {
  fill: #ffffff;
}

.c0:active,
.c0:focus {
  border: 1px solid #5ab2f2 !important;
  box-shadow: 0px 0px 2px #0066ff;
  outline: none;
}

.c0:hover {
  border: 1px solid #00000000;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <span
      class="c1"
      height="1.4rem"
      type="oInfo"
      width="1.4rem"
    >
      <svg
        fill="#000"
        height="1.4rem"
        viewBox="0 0 24 24"
        width="1.4rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7H13V9H11V7ZM11 11H13V17H11V11ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
        />
      </svg>
    </span>
    button
  </button>
</DocumentFragment>
`;
